<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/log_reg_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen_50">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/log_reg_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/taviraj_thin"
                android:text="@string/login_acc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/log_reg_text" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardCornerRadius="@dimen/dimen_10"
                app:cardElevation="@dimen/dimen_20"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/dimen_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dimen_15"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/dimen_15"
                        android:paddingBottom="@dimen/dimen_10">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:layout_marginBottom="@dimen/dimen_10"
                            android:background="@drawable/layout_stroke"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/mail_vector"
                                android:layout_width="@dimen/dimen_50"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/image"
                                android:padding="@dimen/dimen_15"
                                app:srcCompat="@drawable/vector_mail" />

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="@dimen/ayrac"
                                android:layout_height="match_parent"
                                android:background="@color/ayrac_log_reg" />

                            <EditText
                                android:id="@+id/login_eposta"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dimen_50"
                                android:autofillHints=""
                                android:background="@null"
                                android:ems="0"
                                android:fontFamily="@font/taviraj_thin"
                                android:hint="@string/eposta"
                                android:inputType="textEmailAddress"
                                android:paddingStart="@dimen/dimen_15"
                                android:paddingEnd="0dp"
                                android:textAlignment="textStart"
                                android:textSize="@dimen/log_reg_text" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:layout_marginBottom="@dimen/dimen_10"
                            android:background="@drawable/layout_stroke"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/password_vector"
                                android:layout_width="@dimen/dimen_50"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/image"
                                android:padding="@dimen/dimen_15"
                                app:srcCompat="@drawable/vector_password" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="@dimen/ayrac"
                                android:layout_height="match_parent"
                                android:background="@color/ayrac_log_reg" />

                            <EditText
                                android:id="@+id/login_password"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dimen_50"
                                android:autofillHints=""
                                android:background="@null"
                                android:ems="0"
                                android:fontFamily="@font/taviraj_thin"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:paddingStart="@dimen/dimen_15"
                                android:paddingEnd="0dp"
                                android:textAlignment="textStart"
                                android:textSize="@dimen/log_reg_text" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/dimen_20">

                        <TextView
                            android:id="@+id/no_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dimen_5"
                            android:text="@string/no_account"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/login_register_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="registerActivity"
                            android:text="@string/no_account2"
                            android:textColor="@color/log_reg_button"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_80"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:text="@string/login"
                app:cornerRadius="@dimen/dimen_5" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>