<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/log_reg_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen_30">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="@dimen/dimen_50"
                    android:layout_height="@dimen/dimen_50"
                    android:layout_marginEnd="@dimen/dimen_30"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:clickable="true"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:id="@+id/text_Proile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/profile_text"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/log_reg_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/dimen_60"
                    android:layout_height="@dimen/dimen_60"
                    android:layout_margin="@dimen/dimen_20"
                    android:contentDescription="@string/image"
                    app:srcCompat="@android:mipmap/sym_def_app_icon" />

                <TextView
                    android:id="@+id/profile_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/taviraj_light"
                    android:text="@string/profile_text"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/log_reg_text" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardCornerRadius="@dimen/dimen_10"
                app:cardElevation="@dimen/dimen_20"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/dimen_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dimen_15"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/dimen_15"
                        android:paddingBottom="@dimen/dimen_10">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:layout_marginBottom="@dimen/dimen_10"
                            android:background="@drawable/layout_stroke"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/mail_vector"
                                android:layout_width="@dimen/dimen_50"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/image"
                                android:padding="@dimen/dimen_15"
                                app:srcCompat="@drawable/vector_mail" />

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="@dimen/ayrac"
                                android:layout_height="match_parent"
                                android:background="@color/ayrac_log_reg" />

                            <TextView
                                android:id="@+id/profile_eposta"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dimen_50"
                                android:background="@null"
                                android:fontFamily="@font/taviraj_thin"
                                android:gravity="center|start"
                                android:hint="@string/eposta"
                                android:paddingStart="@dimen/dimen_15"
                                android:textSize="@dimen/log_reg_text" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:layout_marginBottom="@dimen/dimen_10"
                            android:background="@drawable/layout_stroke"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/password_vector"
                                android:layout_width="@dimen/dimen_50"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/image"
                                android:padding="@dimen/dimen_15"
                                app:srcCompat="@drawable/vector_password" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="@dimen/ayrac"
                                android:layout_height="match_parent"
                                android:background="@color/ayrac_log_reg" />

                            <EditText
                                android:id="@+id/profile_password"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dimen_50"
                                android:autofillHints=""
                                android:background="@null"
                                android:ems="0"
                                android:fontFamily="@font/taviraj_thin"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:paddingStart="@dimen/dimen_15"
                                android:paddingEnd="0dp"
                                android:textAlignment="textStart"
                                android:textSize="@dimen/log_reg_text" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:layout_marginBottom="@dimen/dimen_10"
                            android:background="@drawable/layout_stroke"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/conf_password_vector"
                                android:layout_width="@dimen/dimen_50"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/image"
                                android:padding="@dimen/dimen_15"
                                app:srcCompat="@drawable/vector_password" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="@dimen/ayrac"
                                android:layout_height="match_parent"
                                android:background="@color/ayrac_log_reg" />

                            <EditText
                                android:id="@+id/profile_new_password"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dimen_50"
                                android:autofillHints=""
                                android:background="@null"
                                android:ems="0"
                                android:fontFamily="@font/taviraj_thin"
                                android:hint="@string/new_password"
                                android:inputType="textPassword"
                                android:paddingEnd="@dimen/dimen_15"
                                android:paddingStart="@dimen/dimen_15"
                                android:textAlignment="textStart"
                                android:textSize="@dimen/log_reg_text" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/profile_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_80"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:text="@string/profile_update"
                app:cornerRadius="@dimen/dimen_5" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>